# alpp

./: CMakeLists.txt
include/alpp/: device.h  util.h
src/: device.cc  util.cc
test/: CMakeLists.txt  device.cc
